--- a/static/404.html
+++ b/static/404.html
@@ -9,8 +9,8 @@
     <h1> 404 </h1>
     <h2> Page Not Found </h2>
 
-    <a href="./home"> HOME </a>
-    <a href="./about"> ABOUT </a>
+    <a href="./"> HOME </a> <br>
+    <a href="./about"> ABOUT </a> <br>
     <a href="./contact-me"> CONTACT-ME </a>
 </body>
 
