--- a/static/about.html
+++ b/static/about.html
@@ -8,8 +8,8 @@
 <body> 
     <h1> THIS IS MY ABOUT PAGE </h1>
     
-    <a href="./home"> HOME </a>
-    <a href="./contact-me"> CONTACT-ME </a>
+    <a href="./"> HOME </a> <br>
+    <a href="./contact-me"> CONTACT-ME </a> <br>
     <a href="./404"> 404 </a>
 </body>
 
