--- a/static/contact-me.html
+++ b/static/contact-me.html
@@ -8,8 +8,8 @@
 <body> 
     <h1> THIS IS MY HOMEPAGE </h1>
 
-    <a href="./home"> HOME </a>
-    <a href="./about"> ABOUT </a>
+    <a href="./"> HOME </a> <br>
+    <a href="./about"> ABOUT </a> <br>
     <a href="./404"> 404 </a>
 </body>
 
