--- a/static/index.html
+++ b/static/index.html
@@ -7,10 +7,10 @@
 
 <body> 
     <h1> THIS IS MY HOMEPAGE </h1>
-    
-    <a href="./about"> ABOUT </a>
-    <a href="./contact-me"> CONTACT-ME </a>
-    <a href="./404"> 404 </a>
+
+    <a href="./about"> ABOUT </a> <br>
+    <a href="./contact-me"> CONTACT-ME </a> <br>
+    <a href="./404"> 404 </a> 
 </body>
 
 </html>
